# ParallelRaft

./: README.md
Implementation/: BlockingCollection.h  IOPolling.cpp  Implementation.sln  Implementation.vcxproj  Implementation.vcxproj.filters  InputThread.cpp  LogWriter.cpp  Measurement.cpp
Implementation2/: CMakeLists.txt  CMakeSettings.json  IOPolling.cpp  Implementation2.cpp  Implementation2.h  InputThread.cpp  Main.cpp
ParallelRaft/: Main.cpp  ParallelRaft.sln  ParallelRaft.vcxproj  ParallelRaft.vcxproj.filters  Request.cpp
